# CPM

./: CMakeLists.txt  Makefile  Makefile.common  README.md  TO-DO.txt
cmake/modules/: FindPAPI.cmake  FindProcps.cmake
doc/Images/: Deploying1.dia  Diagram1.dia  Diagram1.eps  Diagrama2.dia
script/: MonitoringMasterScript  start-agent.sh  start-master.sh  stop-agents.sh  stop-master.sh
src/: AgentChild.cpp  AgentChild.h  Energy.cpp  MasterChild.cpp  MasterChild.h  MonitoringAgent.cpp  MonitoringMaster.cpp  MonitoringProcesses.cpp  Network.h  PapiCounts.cpp  resourcefile.qrc
src/MonitoringAgent/: AgentChild.cpp  AgentChild.h  Energy.cpp  Energy.h  Globals.cpp  Globals.h  Makefile  MonitoringAgent.cpp  Network.cpp  Network.h  PapiCounts.cpp  PapiCounts.h
src/MonitoringMaster/: AgentChild.cpp  AgentChild.h  Globals.h  Makefile  MonitoringMaster.cpp  Network.cpp  Network.h
src/MonitoringProcesses/: Makefile  MonitoringProcesses  MonitoringProcesses.pro  main.cpp
src/MonitoringProcesses/controller/: Configuration.cpp  Configuration.h  ConfigurationWindow.cpp  ConfigurationWindow.h  DataWidget.cpp  DataWidget.h  ManageClusterWindow.cpp  ManageClusterWindow.h  Network.cpp  Network.h  mainwindow.cpp  mainwindow.h  ssh_handler.cpp  ssh_handler.h
src/MonitoringProcesses/view/: ConfigurationWindow.ui  DataWidget.ui  ManageClusterWindow.ui  mainwindow.ui
src/controller/: Configuration.cpp  Configuration.h  ConfigurationWindow.cpp  ConfigurationWindow.h  DataWidget.cpp  ManageClusterWindow.cpp  Network.h  mainwindow.cpp  ssh_handler.cpp
src/view/: ConfigurationWindow.ui  DataWidget.ui
